# LearnBlocks

./: .gitignore  Dockerfile  Pipfile  README.md  db.sqlite3  db_wrappers.ipynb  docker-compose.yml  learnblocksdb_schema.sql  package-lock.json  requirements.txt  routes_needed.md  testsql.py  testsql2.py
backend/: README.md  settings.py  urls.py
database_code/: database_queries.sql  db_wrappers.ipynb
frontend/: .eslintignore  .eslintrc.cjs  eslint.config.js  index.html  package-lock.json  package.json  prettier.config.js  tailwind.config.js  tsconfig.json  tsconfig.node.json  vite.config.js
frontend/src/: index.css  index.js  main.jsx  main.tsx
frontend/src/components/: Layout.jsx  Layout.tsx  LoginForm.jsx  Navbar.jsx  Navbar.tsx  RegisterForm.jsx
frontend/src/include/: .blocklyToolbox.js.swp  .transpile.js.swp
frontend/src/lib/: StudentCoursesWidget.jsx
frontend/src/lib/blockly-transpiler/: Cargo.toml
frontend/src/lib/blockly-transpiler/src/: lib.rs
frontend/src/pages/: ClassStudentDetailPage.jsx  CourseCatalogPage.jsx  CourseModulesPage.jsx  EditProfilePage.jsx  JoinClassPage.jsx  Landing.jsx  Landing.tsx  LoginPage.jsx  ModulePage.jsx  Playground.jsx  RegisterPage.jsx  StudentCoursesPage.jsx  StudentHomePage.jsx  StudentsListPage.jsx  TeacherAssignmentsPage.jsx  (+3 more)
learnblocks/: admin.py  apps.py  enums.py  managers.py  mock.py  models.py  serializers.py  signals.py  views.py
learnblocks/enums/: __init__.py  enums.py
learnblocks/migrations/: 0001_initial.py
learnblocks/permissions/: permissions.py
learnblocks/utils/: s3.py  serializers.py
(+46 files in other folders)
