[package]
name = "blockly-transpiler"
authors = ["Gabriel Barnard"]
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
rustpython-parser = "0.4.0"
malachite-base = "0.5.1"
malachite-bigint = "0.2.2"
unique_id = "0.1.5"
once_cell = "1.21.2"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[target.'cfg(target_arch = "wasm32")'.dependencies]
uuid = { version = "1.13.1", default-features = false, features = ["js"] }